<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"

    tools:context="com.noname.akio.named.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_back" />



            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_radius_white_back"
                    android:layout_marginTop="100dp"
                    android:orientation="vertical"
                    >

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:hint="@string/username_placeholder"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:background="@null"
                        android:drawableLeft="@drawable/login_background"
                        android:layout_height="@dimen/edittext_height"
                        android:textColor="@color/vehicle_list_row_light_color"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/text_border_color"
                        android:layout_marginLeft="36dp"/>
                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edittext_height"
                        android:hint="@string/password_placeholder"
                        android:textColor="@color/vehicle_list_row_light_color"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:background="@null"
                        android:drawableLeft="@drawable/password_background"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/login_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/log_in"
                        android:textStyle="bold"
                        android:background="@drawable/transparent_button_with_radius"
                        android:textColor="@color/button_text_color"
                        android:layout_marginLeft="@dimen/button_spacing"/>
                </LinearLayout>

            </LinearLayout>

    </RelativeLayout>
</LinearLayout>

